--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
   application:
     name: cart-service
   datasource:
-    url: jdbc:mysql://localhost:3306/cart_service?createDatabaseIfNotExist=true
+    url: jdbc:mysql://host.docker.internal:3306/cart_service?createDatabaseIfNotExist=true
     username: root
     password: chandu@teja
     driver-class-name: com.mysql.jdbc.Driver
